@@ -1,0 +1,3 @@
+Site URL: https://recu.me/
+Contact: https://recu.me/contact/
+DMCA: https://recu.me/dmca/
